--- a/src/css/options.css
+++ b/src/css/options.css
@@ -121,11 +121,11 @@ label[for=buttonIconAuto] {
   padding-left: 0.2rem;
   min-width: 15rem;
 }
-.sub-item {
+.subItem {
   display: block;
   margin-left: 1.5rem;
 }
-.sub-item > .label {
+.subItem > .label {
   margin-right: 1rem;
   min-width: auto;
 }
