--- a/src/css/popup.css
+++ b/src/css/popup.css
@@ -1,4 +1,5 @@
 @charset "UTF-8";
+
 /**
  * popup.css
  */
@@ -7,30 +8,35 @@ body {
   border: none;
   padding: 0.5rem;
   min-width: 6.5rem;
-  background-color: #FFF;
+  background-color: #fff;
   color: #000;
 }
+
 main {
   margin: 0;
   border: none;
   padding: 0;
 }
+
 h1 {
   margin: 0.25rem 0.25rem 0;
   font-size: 1rem;
 }
+
 ul {
   display: block;
   margin: 0;
   padding: 0.25rem 0;
   list-style: none;
 }
+
 li {
   display: block;
   margin: 0;
   border: none;
   padding: 0;
 }
+
 button {
   all: unset;
   appearance: none;
@@ -42,22 +48,26 @@ button {
   text-indent: 0.25rem;
   width: 100%;
 }
+
 button[disabled] {
   background-color: transparent;
   color: #808080;
 }
+
 button:not([disabled]):hover,
 button:not([disabled]):focus {
-  border: 1px solid #CCC;
-  background-color: #EAEAEA;
+  border: 1px solid #ccc;
+  background-color: #eaeaea;
   color: #000;
 }
+
 button:not([disabled]):active,
 button:not([disabled]):focus:active {
-  border: 1px solid #CCC;
-  background-color: #D7D7D8;
+  border: 1px solid #ccc;
+  background-color: #d7d7d8;
   color: #000;
 }
-.snsItem {
+
+.sns-item {
   display: none;
 }
